Update the docker-compose.yml with the right version Add an apt-clean to the end of our builds to make the packages smaller.

--- a/dhcp/Dockerfile
+++ b/dhcp/Dockerfile
@@ -8,4 +8,5 @@ RUN apt-get update; \
     chown root:dhcpd /var/lib/dhcp /var/lib/dhcp/dhcpd.leases; \
     chmod 775 /var/lib/dhcp; \
     chmod 664 /var/lib/dhcp/dhcpd.leases; \
-    mkdir /run/dhcp-server;
+    mkdir /run/dhcp-server; \
+    apt-get clean;
